@@ -172,20 +172,20 @@ average on a new line, just like with vmstat.
 
 USAGE
 -----
-Using dstat to relate disk-throughput with network-usage (eth0), total CPU-usage and system counters:::
-.....
+Using dstat to relate disk-throughput with network-usage (eth0), total CPU-usage and system counters:
+----
 dstat -dnyc -n eth0 -C total -f 5
-.....
+----
 
-Checking dstat's behaviour and the system's impact on dstat:::
-.....
+Checking dstat's behaviour and the system's impact on dstat:
+----
 dstat -taf --debug
-.....
+----
 
-Using the external clock and app plugins together with normal system resources:::
-....
+Using the external clock and app plugins together with normal system resources:
+----
 dstat -M clock,app -cndylp
-....
+----
 
 
 BUGS
